--- a/styles.html
+++ b/styles.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Registration Form</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Assignment.css">
 </head>
 <body>
   <form>
@@ -60,3 +60,4 @@
 </body>
 
 </html>
+
