--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Registration Form</title>
-  <link rel="stylesheet" href="Assignment.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <form>
@@ -58,4 +58,5 @@
     <button type="submit" class="submit-btn">Submit</button>
   </form>
 </body>
+
 </html>
