--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Registration Form</title>
+  <title>Register Form</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -60,3 +60,4 @@
 </body>
 
 </html>
+
