--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <label for="first-name">Name:</label>
     <input type="text" id="first-name" name="first-name" required>
 
-    <label for="last-name">Last Name:</label>
+    <label for="last-name">Name:</label>
     <input type="text" id="last-name" name="last-name" required>
 
     <label for="email">Email:</label>
@@ -60,5 +60,6 @@
 </body>
 
 </html>
+
 
 
