--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <label for="program" style="display:inline;">Program</label><br>
 
     <input type="radio" id="year-level" name="type">
-    <label for="year-level" style="display:inline;">Year Level</label><br>
+    <label for="year-level" style="display:inline;">Level</label><br>
 
     <input type="checkbox" id="terms">
     <label for="terms" style="display:inline;">I accept the <a href="#" style="color: #7fa3ff;">terms and conditions</a></label>
@@ -60,6 +60,7 @@
 </body>
 
 </html>
+
 
 
 
