--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
 
-    <label for="password">Create Password:</label>
+    <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
 
     <hr>
@@ -60,6 +60,7 @@
 </body>
 
 </html>
+
 
 
 
