--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Registration Form</h2>
     <p>Please fill out this form with the required information</p>
 
-    <label for="first-name">Name:</label>
+    <label for="first-name">First Name:</label>
     <input type="text" id="first-name" name="first-name" required>
 
     <label for="last-name">Last Name:</label>
@@ -60,6 +60,7 @@
 </body>
 
 </html>
+
 
 
 
